--- a/package.json
+++ b/package.json
@@ -41,32 +41,32 @@
     "lint": "yarn lint:eslint:fix && yarn lint:prettier"
   },
   "dependencies": {
-    "@types/node-fetch": "^2.6.11",
+    "@types/node-fetch": "^2.6.12",
     "node-fetch": "^2.7.0",
     "ruply": "^1.0.1"
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "@babel/preset-env": "^7.25.4",
-    "@babel/preset-typescript": "^7.24.7",
+    "@babel/preset-env": "^7.26.9",
+    "@babel/preset-typescript": "^7.27.0",
     "@mollie/eslint-config-typescript": "^1.6.5",
-    "@types/jest": "^29.5.12",
-    "@types/node": "^22.5.4",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.13.17",
     "babel-jest": "^29.7.0",
-    "commitizen": "^4.3.0",
+    "commitizen": "^4.3.1",
     "cz-conventional-changelog": "^3.3.0",
-    "dotenv": "^16.4.5",
+    "dotenv": "^16.4.7",
     "eslint": "^8.35.0",
     "jest": "^29.7.0",
     "jest-bluster": "^2.0.0",
     "nock": "^13.5.5",
     "nock-record": "^0.3.9",
-    "prettier": "^3.3.3",
+    "prettier": "^3.5.3",
     "rollup": "^3.18.0",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-json": "^4.0.0",
     "rollup-plugin-node-resolve": "^5.2.0",
-    "typescript": "^5.6.2"
+    "typescript": "^5.8.2"
   },
   "resolutions": {
     "eslint-plugin-import": "^2.26.0"
@@ -78,5 +78,6 @@
   },
   "files": [
     "dist/**/*"
-  ]
+  ],
+  "packageManager": "yarn@1.22.22"
 }
