--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "ruply": "^1.0.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.0.0-0",
     "@babel/plugin-transform-class-properties": "^7.27.1",
     "@babel/preset-env": "^7.28.5",
     "@babel/preset-typescript": "^7.28.5",
